swiggy-app/src/app/spot-light/spot-light.component.scss
.flex-pad {
    display: flex;
    padding: 0;
    align-items: center;
    margin-top: -8px;
}

.card-margin {
    margin:10% 0% 0% 0%;
    // margin-top: 15px;
}

.mar-top {
    margin-top: 10px;
    margin-left: 10px;
    font-weight: bolder;
}

:host ::ng-deep {
    .swiper-wrapper {
        align-items: center !important;
        justify-content: center !important;
        // margin-top: -20px;
    }
    ion-card-subtitle {
        padding: 20px;
        margin-top: -35px;
        font-size: 10px;
    }
    .swiper-container {
      bottom: 20px;
    }
    ion-card-content {
      padding: 0%;
    }
}
.icon-size {
  color: #f94d00;
}

.flex-content {
    display: flex;
    flex-direction: column;
  }
  .card-size {
    width: 100px;
    height: 100px;
    border-radius: 10px;
  }
  
  .ios .align-content {
    margin-top: -10px;
    font-size: 16px;
    float: left;
    margin-left: 15px;
    font-weight: 500;
    display: flex;
    flex-direction: column;
    width: fit-content;
    color: #000;
  }
  
  .md .align-content {
    font-weight: 500;
    margin-top: 10px;
    font-size: 16px;
    float: left;
    margin-left: 15px;
    display: flex;
    flex-direction: column;
    width: fit-content;
    color: #000;
  }

  img {
    object-fit: cover;
    width: 100%;
    height: 100%;
  }

.rateimg {
    font-size: 11px;
    margin-top: 6px;
    width: fit-content;
    margin-left: 15px;
  }

  .flexDir {
      display: flex;
      flex-direction: column;
  }
  
  .position {
    // display: flex;
    // flex-direction: column;
    align-items: center;
    position: absolute;
    bottom: 60px;
    right: 22px;
    background: white;
    width: 97px;
    height: 30px;
    border-radius: 5px;
}

.text-off {
  font-size: 10px;
  font-weight: bolder;
  color: #f94d00;

}

.text-upto {
font-size: 10px;
color: #f94d00;

}

